<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id = "@+id/id_beast"
            android:icon="@drawable/ic_ghost"
            android:title = "@string/nmBeasts"
            app:showAsAction = "ifRoom"/>

        <item android:id = "@+id/id_favorite"
            android:icon="@drawable/ic_star_nav"
            android:title = "@string/nmFavorite"
            app:showAsAction = "ifRoom"/>

        <item android:id = "@+id/id_article"
            android:icon="@drawable/ic_library_24"
            android:title = "@string/nmArticle"
            app:showAsAction = "ifRoom"/>

        <item android:id = "@+id/id_games"
            android:icon="@drawable/ic_library_24"
            android:title = "@string/nmGames"
            app:showAsAction = "ifRoom"/>
    </group>
</menu>