<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/bHelp"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#1D1D1D"
        android:text="@string/help"
        android:textColor="@color/button_help"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bBackQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:src="@drawable/ic_arrow_back_w"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_goal" />

            <TextView
                android:id="@+id/tvCorrectAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="0"
                android:textColor="@color/text_game"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text=":"
            android:textColor="@color/text_game" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvErrorAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="0"
                android:textColor="@color/text_game"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_mimo" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llProgressDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="10"
            android:theme="@style/Theme.MythicalBeast.ProgressBar"
            android:minHeight="22dp"
            android:progress="5" />

        <TextView
            android:id="@+id/tvProgerss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="0/10"
            android:textColor="@color/text_game"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/question"
        android:textColor="@color/text_game"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llProgressDetails" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/img_205"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/layoutQuestionLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
        app:layout_constraintVertical_weight="1" />

    <LinearLayout
        android:id="@+id/layoutQuestionLine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@+id/adViewMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clAnswerLine1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:onClick="onClick"
                android:background="@drawable/btn_border">

                <TextView
                    android:id="@+id/tvAnswerLine1Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:maxLines="2"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="@string/family"
                    android:textColor="@color/text_game"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clAnswerLine2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:onClick="onClick"
                android:background="@drawable/btn_border">

                <TextView
                    android:id="@+id/tvAnswerLine2Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:maxLines="2"
                    android:text="@string/family"
                    android:textColor="@color/text_game"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clAnswerLine3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:onClick="onClick"
                android:background="@drawable/btn_border">

                <TextView
                    android:id="@+id/tvAnswerLine3Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:maxLines="2"
                    android:text="@string/family"
                    android:textColor="@color/text_game"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clAnswerLine4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:onClick="onClick"
                android:background="@drawable/btn_border">

                <TextView
                    android:id="@+id/tvAnswerLine4Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:maxLines="2"
                    android:text="@string/family"
                    android:textColor="@color/text_game"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/adViewMain"/>

    <com.yandex.mobile.ads.banner.BannerAdView
        android:id="@+id/adViewMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>